--- a/lung_cancer/connection_settings.py.template
+++ b/lung_cancer/connection_settings.py.template
@@ -24,3 +24,7 @@ def get_connection_string():
 	connection_string = ';'.join([driver,server,port,database,uid,pwd])
 	return connection_string
 
+# Variables
+BATCH_SIZE = 120
+MODEL_NAME = "ResNet_152.model"
+
