added info for stored procedures

--- a/lung_cancer/connection_settings.py.template
+++ b/lung_cancer/connection_settings.py.template
@@ -26,5 +26,6 @@ def get_connection_string():
 
 # Variables
 BATCH_SIZE = 120
-MODEL_NAME = "ResNet_152.model"
+CNTK_MODEL_NAME = "ResNet_152.model"
+LIGHTGBM_MODEL_NAME = "ligthgbm_sql"
 
