--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,6 @@ ENV/
 #project
 lung_cancer/connection_settings.py
 preprocessing/config_preprocessing.py
+playground.ipynb
+tmp.model
+sql/debug.sql
