updated scoring with IO with SQL variables

--- a/lung_cancer/connection_settings.py.template
+++ b/lung_cancer/connection_settings.py.template
@@ -29,5 +29,5 @@ def get_connection_string():
 BATCH_SIZE = 120
 NUMBER_PATIENTS = 200#1595
 CNTK_MODEL_NAME = "ResNet_152.model"
-LIGHTGBM_MODEL_NAME = "ligthgbm_sql"
+LIGHTGBM_MODEL_NAME = "lightgbm_sql"
 
